--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    font-family: Orbitron, sans-serif;
+    font-weight: normal;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(to left, #bcd4e1, #4f6e5c);
+}
+
