--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@ body {
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: minmax(120px, auto) repeat(5, 100px);
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
 /* Set calculator-grid button properties */
@@ -42,5 +43,30 @@ body {
 /* Span two columns for .span-two element */
 .span-two {
     grid-column: span 2;
+}
+
+/* Set .output properties */
+.output {
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+/* Set properties for .previous-operand */
+.output .previous-operand {
+    color: rgba(255, 255, 255, .75);
+    font-size: 1.5rem;
+}
+
+/* Set properties for .current-operand */
+.output .current-operand {
+    color: white;
+    font-size: 2.5rem;
 }
 
