Add Google Font Icon for data-delete button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,10 @@ body {
     word-break: break-all;
 }
 
+.material-symbols-outlined {
+    transform: scale(2);
+}
+
 /* Set properties for .previous-operand */
 .output .previous-operand {
     color: rgba(255, 255, 255, .75);
